fea-rs/test-data/compile-tests/mini-latin/bad/bad_size1.fea
feature size {
    parameters 10.0 3 80 139;
    parameters 6 6 6 0; # only one param statement allowed
} size;
